--- a/src/components/ChampionDetailsFooter.module.css
+++ b/src/components/ChampionDetailsFooter.module.css
@@ -32,6 +32,7 @@
   max-width: 1080px;
 }
 .championDetailsDescription {
+  font-family: Avenir;
   color: #ebdfca;
   font-size: 20px;
   line-height: 40px;
