--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,1 +1,14 @@
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px #0a1e2d;
+    background: #0a1e2d;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #ebdfca;
+    border-radius: 4px;
+}
